﻿drkns 24.03.2016 23:04:54 +0200 - build 4598

1. Спрашиваем имя & пароль при cd \\server\share

w17 24.03.2016 20:32:59 +0300 - build 4597

1. Уточнение 4596. Вернём переключение когда Info панель неактивна.

w17 24.03.2016 17:14:32 +0300 - build 4596

1. Уточнение 4595. Переключение только при активной панели информации.

w17 24.03.2016 16:14:28 +0300 - build 4595

1. Продолжение 4590, 4594 переключение по Ctrl-Shift-S.

w17 24.03.2016 14:55:56 +0300 - build 4594

1. Продолжение 4590.
   Режим показа размера настраивается: Panel.Info.ShowBytes (default=false); переключение по Ctrl-S. 

drkns 24.03.2016 02:05:31 +0200 - build 4593

1. Падение при нажатии +/- в панели информации, если там присутствовал вьювер.

drkns 23.03.2016 20:31:08 +0200 - build 4592

1. С форума: Не логичное поведение при удалении сетевого диска

w17 23.03.2016 17:59:00 +0300 - build 4591

1. M#3089: Мелкая правка в панели информации (Ctrl+L)

w17 22.03.2016 13:55:04 +0300 - build 4590

1. Продолжение 4587 -- EOPT_SHOWSCROLLBAR; VCTL_GETINFO: VOPT_SHOWxxx, VOPT_QUICKVIEW.

drkns 22.03.2016 08:27:45 +0200 - build 4589

1. Уточнение 4585.

drkns 21.03.2016 17:11:49 +0200 - build 4588

1. Macro ARRAYSIZE -> constexpr std::size

shmuel 21.03.2016 16:05:35 +0200 - build 4587

1. ECTL_GETINFO: в перечисление EDITOR_OPTIONS добавлены флаги EOPT_SHOWTITLEBAR и EOPT_SHOWKEYBAR.

drkns 21.03.2016 15:31:02 +0200 - build 4586

1. Продолжение 4584.

drkns 20.03.2016 11:57:40 +0200 - build 4585

1. Продолжение 4584.

drkns 20.03.2016 00:41:42 +0200 - build 4584

1. Убираем костыли, щедро расставленные повсеместно для поддержки VS2010 и компании.

drkns 19.03.2016 23:19:41 +0200

1. Given that our German users aren't happy with "#0003145: New German translation", I'm reverting it to the previous version.
   Only previously untranslated strings are picked from #0003145 now.

drkns 18.03.2016 18:03:45 +0200

1. Для сборки требуются VC++ 2015 / GCC 5.

drkns 18.03.2016 12:00:11 +0200 - build 4583
