@@ -1,4 +1,8 @@
-﻿drkns 24.03.2016 23:04:54 +0200 - build 4598
+﻿drkns 24.03.2016 23:40:39 +0200 - build 4599
+
+1. 0003201: Message возвращает результат на 1 меньше ожидаемого
+
+drkns 24.03.2016 23:04:54 +0200 - build 4598
 
 1. Спрашиваем имя & пароль при cd \\server\share
 
